accessible/ipc/win/handler/AccessibleTextTearoff.cpp
@@ -27,22 +27,6 @@ AccessibleTextTearoff::AccessibleTextTearoff(AccessibleHandler* aHandler)
 }
 
 HRESULT
-AccessibleTextTearoff::ResolveAccText()
-{
-  if (mAccTextProxy) {
-    return S_OK;
-  }
-
-  RefPtr<IUnknown> proxy(mHandler->GetProxy());
-  if (!proxy) {
-    return E_UNEXPECTED;
-  }
-
-  return proxy->QueryInterface(IID_IAccessibleText,
-                               getter_AddRefs(mAccTextProxy));
-}
-
-HRESULT
 AccessibleTextTearoff::ResolveAccHypertext()
 {
   if (mAccHypertextProxy) {
@@ -66,36 +50,36 @@ IMPL_IUNKNOWN_QUERY_TAIL_AGGREGATED(mHandler)
 HRESULT
 AccessibleTextTearoff::addSelection(long startOffset, long endOffset)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->addSelection(startOffset, endOffset);
+  return mAccHypertextProxy->addSelection(startOffset, endOffset);
 }
 
 HRESULT
 AccessibleTextTearoff::get_attributes(long offset, long *startOffset,
                                       long *endOffset, BSTR *textAttributes)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->get_attributes(offset, startOffset, endOffset,
+  return mAccHypertextProxy->get_attributes(offset, startOffset, endOffset,
                                        textAttributes);
 }
 
 HRESULT
 AccessibleTextTearoff::get_caretOffset(long *offset)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->get_caretOffset(offset);
+  return mAccHypertextProxy->get_caretOffset(offset);
 }
 
 HRESULT
@@ -104,24 +88,24 @@ AccessibleTextTearoff::get_characterExtents(long offset,
                                             long *x, long *y, long *width,
                                             long *height)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->get_characterExtents(offset, coordType, x, y, width,
+  return mAccHypertextProxy->get_characterExtents(offset, coordType, x, y, width,
                                              height);
 }
 
 HRESULT
 AccessibleTextTearoff::get_nSelections(long *nSelections)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->get_nSelections(nSelections);
+  return mAccHypertextProxy->get_nSelections(nSelections);
 }
 
 HRESULT
@@ -129,35 +113,35 @@ AccessibleTextTearoff::get_offsetAtPoint(long x, long y,
                                          enum IA2CoordinateType coordType,
                                          long *offset)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->get_offsetAtPoint(x, y, coordType, offset);
+  return mAccHypertextProxy->get_offsetAtPoint(x, y, coordType, offset);
 }
 
 HRESULT
 AccessibleTextTearoff::get_selection(long selectionIndex, long *startOffset,
                                      long *endOffset)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->get_selection(selectionIndex, startOffset, endOffset);
+  return mAccHypertextProxy->get_selection(selectionIndex, startOffset, endOffset);
 }
 
 HRESULT
 AccessibleTextTearoff::get_text(long startOffset, long endOffset, BSTR *text)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->get_text(startOffset, endOffset, text);
+  return mAccHypertextProxy->get_text(startOffset, endOffset, text);
 }
 
 HRESULT
@@ -166,12 +150,12 @@ AccessibleTextTearoff::get_textBeforeOffset(long offset,
                                             long *startOffset, long *endOffset,
                                             BSTR *text)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->get_textBeforeOffset(offset, boundaryType, startOffset,
+  return mAccHypertextProxy->get_textBeforeOffset(offset, boundaryType, startOffset,
                                              endOffset, text);
 }
 
@@ -181,12 +165,12 @@ AccessibleTextTearoff::get_textAfterOffset(long offset,
                                            long *startOffset, long *endOffset,
                                            BSTR *text)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->get_textAfterOffset(offset, boundaryType,
+  return mAccHypertextProxy->get_textAfterOffset(offset, boundaryType,
                                             startOffset, endOffset, text);
 }
 
@@ -196,70 +180,70 @@ AccessibleTextTearoff::get_textAtOffset(long offset,
                                         long *startOffset, long *endOffset,
                                         BSTR *text)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->get_textAtOffset(offset, boundaryType, startOffset,
+  return mAccHypertextProxy->get_textAtOffset(offset, boundaryType, startOffset,
                                          endOffset, text);
 }
 
 HRESULT
 AccessibleTextTearoff::removeSelection(long selectionIndex)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->removeSelection(selectionIndex);
+  return mAccHypertextProxy->removeSelection(selectionIndex);
 }
 
 HRESULT
 AccessibleTextTearoff::setCaretOffset(long offset)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->setCaretOffset(offset);
+  return mAccHypertextProxy->setCaretOffset(offset);
 }
 
 HRESULT
 AccessibleTextTearoff::setSelection(long selectionIndex, long startOffset,
                                     long endOffset)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->setSelection(selectionIndex, startOffset, endOffset);
+  return mAccHypertextProxy->setSelection(selectionIndex, startOffset, endOffset);
 }
 
 HRESULT
 AccessibleTextTearoff::get_nCharacters(long *nCharacters)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->get_nCharacters(nCharacters);
+  return mAccHypertextProxy->get_nCharacters(nCharacters);
 }
 
 HRESULT
 AccessibleTextTearoff::scrollSubstringTo(long startIndex, long endIndex,
                                          enum IA2ScrollType scrollType)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->scrollSubstringTo(startIndex, endIndex, scrollType);
+  return mAccHypertextProxy->scrollSubstringTo(startIndex, endIndex, scrollType);
 }
 
 HRESULT
@@ -267,12 +251,12 @@ AccessibleTextTearoff::scrollSubstringToPoint(long startIndex, long endIndex,
                                               enum IA2CoordinateType coordinateType,
                                               long x, long y)
 {
-  HRESULT hr = ResolveAccText();
+  HRESULT hr = ResolveAccHypertext();
   if (FAILED(hr)) {
     return hr;
   }
 
-  return mAccTextProxy->scrollSubstringToPoint(startIndex, endIndex,
+  return mAccHypertextProxy->scrollSubstringToPoint(startIndex, endIndex,
                                                coordinateType, x, y);
 }
 
